samples/_failures_safe/1761341440_4d50e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_feecc61e.c: In function ‘main’:
./samples/SAFE/__tmp_feecc61e.c:156:5: error: expected declaration or statement at end of input
  156 |     printf("\nFiltered Log Entries:\n");
      |     ^~~~~~
